--- a/vue-shopping/package.json
+++ b/vue-shopping/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
+    "vue-i18n": "^8.22.4",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
